# research

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: format-python.sh  session-start.sh
.github/workflows/: ci.yml
docs/: fulltext_library_2026-06.md  literature_monthly_2026-05.md  notes.md
notebooks/: example_analysis.ipynb
scripts/: analyze_reading_list.py  example_analysis.py  integrate_monthly_reports.py  process_new_reports.py
src/research/: __init__.py  analysis.py  config.py  ingest.py  literature.py  watch.py
tests/: test_analysis.py  test_ingest.py  test_literature.py  test_watch.py
